<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Enter search term</string>
    <string name="settings">Search Settings</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_options">SearchOptions</string>
    <string name="label_searchoptions">Advanced search options</string>
    <string name="option_image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="save">Save</string>
    <string name="color_type">Color Type</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_filter_value">google.com</string>

</resources>
