<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchOptions" >

    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="18dp"
        android:text="@string/label_searchoptions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spinnerImageSize"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/option_image_size"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSearchTitle"
        android:layout_toRightOf="@+id/tvImageSize"
        android:entries="@array/image_size_array" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerColorFilter"
        android:layout_alignRight="@+id/tvImageSize"
        android:text="@string/color_filter" />
    
    <Spinner
        android:id="@+id/spinnerColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerImageSize"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/color_filter_array" />
    
     <TextView
         android:id="@+id/tvImageType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/spinnerImageType"
         android:layout_alignRight="@+id/tvColorFilter"
         android:text="@string/image_type" />
    
    <Spinner
        android:id="@+id/spinnerImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerColorFilter"
        android:layout_toRightOf="@+id/tvImageType"
        android:entries="@array/image_type_array" />
    
    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:layout_alignRight="@+id/tvImageType"
        android:text="@string/site_filter" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerImageType"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:text="@string/site_filter_value" />

    <Button
        android:id="@+id/btnSaveOptions"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSiteFilter"
        android:layout_below="@+id/etSiteFilter"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="24dp"
        android:onClick="onSaveOptions"
        android:text="@string/save" />

</RelativeLayout>
